<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AutoLogin</string>
    <string name="title_section1">账号</string>
    <string name="title_section2">nic</string>
    <string name="title_section3">日志</string>
    <string name="select_ssid">选择SSID</string>
    <string name="action_about">关于</string>
    <string name="account_message">用户名</string>
    <string name="passwd_message">密码</string>
    <string name="button_ok">保存并登陆</string>
    <string name="account_card">一卡通号：</string>
    <string name="account_state">账户状态：</string>
    <string name="online_state">在线状态：</string>
    <string name="usage">已用流量：</string>
    <string name="expire_date">到期时间：</string>
    <string name="remain_money">账户余额：</string>
    <string name="button_unlock">流量解锁</string>
    <string name="button_payfee">缴月租费</string>
    <string name="button_recharge">在线充值</string>
    <string name="query_passwd">查询密码：</string>
    <string name="recharge_money">充值金额：</string>
    <string name="verify_code">校 验 码：</string>
    <string name="button_back">返回</string>
    <string name="button_yes">确定</string>
    <string name="button_add">+</string>
    <string name="button_rm">-</string>
    <string name="ssid_selection">选择SSID</string>
    <string name="input_ssid">手动输入SSID</string>
    <string name="select_from_list">从WiFi列表选择</string>
    <string name="or">或</string>
    <string name="about_author">\t\t\tAuthor:\t\t cedar</string>
    <string name="about_contact">\t\tContact:\t\t cedarty@gmail.com</string>
    <string name="about_autologin">AutoLogin:\t\t http://autologin.cedar.tk</string>

</resources>
