<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:columnCount="3"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:rowCount="7" >

    <TextView
        android:id="@+id/accountCardText"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text="@string/account_card"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/accountCard"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:layout_column="0"
        android:layout_row="1"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text="@string/account_state"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/accountState"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:layout_column="0"
        android:layout_row="2"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text="@string/online_state"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/onlineState"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TableLayout
        android:id="@+id/onlineTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_row="3"
        android:paddingLeft="@dimen/activity_horizontal_margin" >

    </TableLayout>

    <TextView
        android:layout_column="0"
        android:layout_row="4"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text="@string/usage"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/usage"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/button_unlock"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text="@string/button_unlock" />

    <TextView
        android:layout_column="0"
        android:layout_row="5"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text="@string/expire_date"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/expireDate"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/button_payfee"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text="@string/button_payfee" />
    
    <TextView
        android:layout_column="0"
        android:layout_row="6"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text="@string/remain_money"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/remainMoney"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/buttonRecharge"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text="@string/button_recharge" />
    
</GridLayout>