<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cedar.autologin.AccountFragment" >
    
    <EditText
        android:id="@+id/account_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:width="@dimen/abc_action_bar_stacked_tab_max_width"
        android:hint="@string/account_message" />
     
    <EditText android:id="@+id/passwd_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:width="@dimen/abc_action_bar_stacked_tab_max_width"
        android:inputType="textPassword"
        android:hint="@string/passwd_message" />
      
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:onClick="accountOK"
        android:text="@string/button_ok" />

</LinearLayout>
